# AoC-2025

./: 2-input.txt  Cargo.toml  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: ribr3gc7kazm282bxiqpmjy9j2h4jaxk-source
src/: 1-secret-entrance.rs  10-factory.rs  11-reactor.rs  12-christmas-tree-farm.rs  2-gift-shop.rs  3-lobby.rs  4-printing-department.rs  5-cafeteria.rs  6-trash-compactor.rs  7-laboratories.rs  8-playground.rs  9-movie-theater.rs
